# rs-get-folder-size

./: Cargo.toml  README.md
src/: main.rs
