[package]
name = "rgfs"
version = "0.1.0"
edition = "2021"
description = "get folder size rustify"
license-file = "./LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
tokio = { version = "1.33.0", features = ["fs", "macros", "rt", "rt-multi-thread"] }
